--- a/lib/dev-server/template.html
+++ b/lib/dev-server/template.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{title}} - Design System React</title>
     <link rel="stylesheet" href="https://cdn.ons.gov.uk/sdc/design-system/61.0.4/css/main.css">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body class="{{bodyClass}}">
     {{body}}
